# pyEDFieeg

./: .gitignore  README.md  index.html  is_fs_equal.csv  paths.py  pyproject.toml  requirements.txt
FILES/EDF_INFO/: EDF_INFO_allP.csv
FILES/EDF_INFO/1005/: ChannelsKeep_1005.csv  EDF_OVERLAP_INFO_1005.csv  EDF_PATH_EXCLUDED_1005.csv
FILES/EDF_INFO/1106/: EDF_CHAN_1106.csv
FILES/EDF_INFO/1109/: CHANNEL_LIST_1109.csv  (+4 more)
GitpageImages/: frontimage.ai
IN_FILES/CHANNEL_LIST/: 1006.json  1030.json  1038.json  1064.json  1074.json  1085.json  1097.json  1106.json  1109.json  1111.json  1119.json  1149.json  1163.json  1167.json  1168.json  1179.json  1216.json  1220.json  1258.json  1344.json  1379.json  1397.json  687.json  756.json  770.json  782.json  803.json  815.json  821.json  852.json  873.json  874.json  895.json  910.json  931.json  934.json  943.json  947.json  95.json  998.json  (+10 more)
docs/: Makefile  index.html  index_example.html
docs/source/: READMEtext.md  conf.py  index.md
processingUCLH/: check_sample_rate.py  check_sampling_rate.py  edf_info.py  edf_info_overall.py  edf_info_woChanInfo.py  edf_overlap_info.py  paths.py
processingUCLH/IN_FILES/: SeverityTable.xlsx
src/pyEDFieeg/: edfCollectionInfo.py  edfCollectionInfo_woChanInfo.py  edfOverlapping.py  edfSegmentsiEEG.py  edfSegmentsiEEGSimple.py  edfSegmentsiEEGfull.py  edf_overlapping.py  edfcollection_funcs.py  ieegSegmentsEDF.py  rawPlotiEEG.py
testing/: edfSegmentsiEEG.py  test_continuousSeg_extraction.py  test_segments_extraction.py  test_seizures_extraction.py  testing_segments_extraction.py
(+145 files in other folders)
