[tool.poetry]
name = "pyEDFieeg"
version = "0.0.1"
description = "Useful functions for handling edf files obtained from for iEEG recordings"
authors = ["mariella <mariella199098@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "^1.4.2"
pyEDFlib = "^0.1.28"
scipy = "^1.8.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
myst-parser = "^0.17.2"
sphinx-autodoc-typehints = "^1.18.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
