[tool.poetry]
name = "pyEDFieeg"
version = "0.0.1"
description = "Useful functions for handling edf files obtained from for iEEG recordings"
authors = ["mariella <mariella199098@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "^1.4.2"
pyEDFlib = "^0.1.28"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
openpyxl = "^3.0.10"
plotly = "^5.8.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
myst-parser = "^0.18.0"
sphinx-autodoc-typehints = "^1.18.1"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "^0.3.2"
sphinxcontrib-napoleon = "^0.7"
Pygments = "^2.12.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
